Rewrite theory notes 16-20 in connected narrative style