@@ -1,359 +1,129 @@
-# 19. Java 21: Virtual Threads (Project Loom)
+# 19. Java 21: Virtual Threads из Project Loom
 
-Главная фича Java 21. Меняет способ писать concurrent-код.
+## Проблема которую решают виртуальные потоки
 
----
+Классическая модель Java concurrency привязывала каждый Thread к отдельному OS thread. Это удобно концептуально — thread в Java напрямую соответствует thread в операционной системе, планирование делает ядро, всё прозрачно. Но за эту прозрачность приходится платить существенной ценой при масштабировании.
 
-## 1. Проблема, которую решают virtual threads
+Каждый OS thread потребляет значительные ресурсы. Стек выделяется размером обычно 1 мегабайт по умолчанию — это виртуальная память которая не вся используется, но всё равно резервируется. Переключение контекста между threads требует сохранения регистров процессора, обновления TLB, потенциального сброса кэшей — операция дорогая. Планирование множества threads создаёт нагрузку на планировщик ОС. Практический предел количества OS threads на JVM — несколько тысяч на современном сервере, дальше начинается деградация производительности.
 
-### 1.1 Классические (platform) threads
+Для web сервисов обрабатывающих множество одновременных запросов это создаёт архитектурную проблему. Каждый запрос требует thread — если thread ждёт ответа от базы данных, вызова другого сервиса, чтения из очереди, он всё это время блокирует OS thread. При тысяче одновременных запросов нужна тысяча threads, каждый большую часть времени просто ждёт I/O. Это неэффективное использование ресурсов и ограничение масштабируемости.
 
-- 1 Java-поток = 1 OS-поток.
-- OS-поток дорогой: ~1 MB стека, kernel-level context switch.
-- На сервере с 8 GB RAM — ~4-5 тысяч потоков максимум.
-- Пул потоков Tomcat = 200. При I/O-bound задачах CPU простаивает (потоки блокируются).
+Индустрия ответила на эту проблему асинхронным программированием — reactive frameworks вроде Project Reactor и WebFlux, CompletableFuture с цепочками callback, asynchronous drivers для баз данных и сетевых операций. Философия — thread не блокируется, он передаётся обратно в pool когда операция начинает ожидание, возобновление обрабатывается через callback когда результат готов. Один thread может обслужить тысячи запросов параллельно.
 
-### 1.2 Reactive-подход как альтернатива
+Проблема с асинхронным подходом — колоссальное усложнение кода. Логика запроса разбивается на цепочки колбэков или reactive операторов. Stacktrace становится бесполезным потому что каждая асинхронная точка ломает вызов. Отладка превращается в кошмар — обычные breakpoint не работают предсказуемо, значения переменных теряются между async шагами. Экосистема становится специфической — все библиотеки должны быть reactive иначе весь выигрыш теряется. Один блокирующий вызов в цепочке нейтрализует все преимущества.
 
-Netty + WebFlux + Reactor: event loop с 4-8 потоками обрабатывает тысячи соединений через non-blocking I/O.
+Project Loom предложил радикально другой подход. Не менять модель программирования, оставить thread-per-request как есть, но сделать threads настолько дешёвыми что миллионы одновременных концептуально возможны. Разработчик пишет обычный код с прямыми вызовами, JVM берёт на себя эффективное управление ресурсами.
 
-Плюсы: масштабируется.
-Минусы:
-- Сложный код (Mono/Flux цепочки).
-- Каждая библиотека должна быть reactive (JDBC → R2DBC, etc).
-- Отладка кошмар (stacktrace в разных потоках).
+## Что такое виртуальный поток
 
-### 1.3 Virtual threads — компромисс
+Виртуальный поток технически представляет собой lightweight thread управляемый JVM, а не операционной системой. Класс наследуется от java.lang.Thread что означает совместимость со всем существующим API — Runnable, ExecutorService, ThreadLocal, CompletableFuture работают одинаково для virtual и platform threads. Разработчик может заменить создание Thread на createVirtual и код продолжит работать без изменений.
 
-Оставить простой блокирующий код, но сделать потоки дешёвыми.
+Под капотом виртуальный поток связан с несколькими platform threads через механизм называемый carrier threads. Carrier — это обычный OS thread который выполняет код виртуального thread когда тот активен. Когда виртуальный thread выполняет блокирующую I/O операцию, JVM отсоединяет его от carrier, освобождая carrier для другого виртуального thread. Когда операция I/O завершается, виртуальный thread присоединяется к любому доступному carrier для продолжения выполнения.
 
-- **Virtual thread** = «зелёный поток», управляется JVM.
-- Стек — маленький, в heap (динамический).
-- Миллионы virtual threads на одной JVM — легко.
-- Когда virtual thread блокируется на I/O — JVM отключает его от OS-потока (**carrier thread**), тот идёт обслуживать другой virtual thread.
+Количество carrier threads по умолчанию равно количеству процессорных ядер. Виртуальных threads может быть миллионы, они конкурируют за carrier времени. Планирование виртуальных threads делает JVM а не ОС, что позволяет более эффективные алгоритмы специфичные для этого сценария. Переключение контекста между виртуальными threads на одном carrier существенно дешевле чем между OS threads — не нужно вовлекать ядро, достаточно manipulation в user space.
 
----
+Ключевое поведение — блокирующие I/O операции автоматически освобождают carrier. Когда виртуальный thread вызывает InputStream read, Socket write, JDBC executeQuery, JVM понимает что происходит blocking I/O и передаёт carrier другому виртуальному thread. Реальная работа operating system по ожиданию завершения I/O делается через async примитивы epoll на Linux, kqueue на BSD, IOCP на Windows. Но приложение видит обычный синхронный API, всю асинхронность скрывает JVM.
 
-## 2. Как это работает
+Виртуальные threads крайне дешёвые по памяти. Начальный стек всего несколько сотен байт, растёт по необходимости, максимум несколько килобайт для типичных use case. Миллион виртуальных threads занимает несколько сотен мегабайт памяти — вполне посильно для современных серверов. Сравните с миллионом OS threads который потребовал бы терабайты виртуальной памяти для стеков.
 
-### 2.1 Аналогия
+## Как использовать в коде
 
-Раньше: каждый посетитель ресторана = свой официант (OS thread). Мало официантов, длинная очередь.
+Создание виртуального потока делается через Thread ofVirtual builder или Thread startVirtualThread convenience метод. Executor через Executors newVirtualThreadPerTaskExecutor создаёт executor который для каждой задачи создаёт новый виртуальный thread. Это принципиально отличается от классических thread pools где количество threads фиксировано — виртуальные threads настолько дешёвые что pool не нужен, каждая задача получает свой thread.
 
-Теперь: официантов немного, но каждый обслуживает многих. Пока клиент читает меню (I/O wait) — официант обслужит другого.
+Для web приложений это означает возможность настроить сервер обрабатывать каждый запрос в отдельном виртуальном thread. Tomcat в Spring Boot 3.2 и выше поддерживает виртуальные threads через опцию spring.threads.virtual.enabled. При включении каждый HTTP запрос обрабатывается в новом виртуальном thread, что снимает ограничение классического thread pool на количество одновременных запросов. Сервер может обрабатывать десятки тысяч concurrent connections на скромном железе.
 
-### 2.2 Механика
+Аналогичная поддержка для JDBC — каждый запрос получает virtual thread, обращение к базе данных блокирует virtual thread но не carrier. Connection pool продолжает работать нормально, но количество одновременных запросов больше не ограничено размером HTTP thread pool. Ограничение переносится на pool соединений с базой и capacity самой базы данных.
 
-```
-Virtual Thread              Carrier (OS) Thread                Kernel
-    │                              │                              │
-    │  new virtual thread          │                              │
-    │  Runs code                   │  Executes                    │
-    │  ...                         │  ...                         │
-    │  socket.read()  ─────────►   │  делает epoll_wait          │
-    │                              │                              │
-    │  (unmounted)                 │  Goes idle                   │
-    │                              │  Runs another VT             │
-    │                              │  ...                         │
-    │  data arrived  ◄─────────    │                              │
-    │  (remounted)                 │  Resumes VT                  │
-    │  process data                │                              │
-```
+RabbitMQ consumers, Kafka listeners, scheduled jobs — везде где раньше был thread pool с фиксированным количеством threads можно перейти на виртуальные threads. Каждое сообщение обрабатывается в отдельном virtual thread, никаких ограничений на параллелизм со стороны framework.
 
-Ключевое: JVM компилирует блокирующие вызовы в yield-точки. При блокировке virtual thread «размонтируется» с carrier thread → carrier занят другим.
+Существующий код обычно работает без изменений. Обычные synchronized блоки работают с виртуальными threads. ThreadLocal работает — каждый виртуальный thread имеет свой собственный локальный контекст. CompletableFuture работает — можно комбинировать с виртуальными threads. Единственная разница может проявиться в специфических сценариях требующих особой обработки, но большинство кода прозрачно переходит на новую модель.
 
-### 2.3 Carrier threads
+## Проблема pinning
 
-Пул OS-потоков, на которых бегают virtual threads. По умолчанию — ForkJoinPool с `CommonPool.ParallelismLevel = availableProcessors()`.
+Существует важное ограничение — виртуальные threads не могут быть отсоединены от carrier во всех ситуациях. Если виртуальный thread находится внутри synchronized блока или выполняет native код через JNI, он pinned к своему carrier — не может передать carrier другому виртуальному thread. Если pinned virtual thread блокируется, весь carrier блокируется вместе с ним, что нейтрализует преимущества виртуальных threads.
 
-Настройка:
-```
--Djdk.virtualThreadScheduler.parallelism=8
-```
+В контексте synchronized блоков это ограничение существенно. Многие библиотеки используют synchronized внутренне для обеспечения thread safety. Каждый вызов такой библиотеки внутри synchronized создаёт pinning. Если библиотека делает blocking I/O внутри synchronized, весь carrier блокируется. Один такой pattern способен свести на нет всю масштабируемость виртуальных threads.
 
----
+JDK решает эту проблему постепенно. В Java 21 многие внутренние synchronized блоки в стандартной библиотеке уже заменены на ReentrantLock который совместим с виртуальными threads. Планируется полное устранение pinning из-за synchronized в будущих версиях. Но для пользовательского кода и сторонних библиотек проблема остаётся актуальной.
 
-## 3. Как создать
+JNI пиннинг более фундаментален — native код не может быть suspended JVM потому что JVM не контролирует его выполнение. Виртуальный thread выполняющий JNI вызов остаётся pinned до возврата из native кода. Если native код делает blocking syscall — carrier заблокирован. Для большинства приложений это не проблема потому что JNI используется редко и обычно быстро завершается, но следует помнить об этом ограничении.
 
-### 3.1 Простой запуск
+Диагностика pinning выполняется через параметр JVM jdk.tracePinnedThreads. При включении JVM печатает stacktrace каждый раз когда виртуальный thread pinned. Это позволяет обнаружить проблемные места в коде — обычно это старые библиотеки с щедрым использованием synchronized. Решение — либо заменить библиотеку на более современную использующую ReentrantLock, либо принять ограничение и понимать что этот компонент не выиграет от виртуальных threads.
 
-```java
-// как platform thread
-Thread.ofPlatform().start(() -> System.out.println("Hello"));
+Практическая рекомендация — избегать synchronized в новом коде под виртуальные threads, использовать ReentrantLock или другие concurrent примитивы. Проверять существующие критические места на pinning через tracePinnedThreads. Приоритизировать библиотеки с современной архитектурой не полагающиеся на synchronized.
 
-// как virtual thread
-Thread.ofVirtual().start(() -> System.out.println("Hello"));
+## Взаимодействие с connection pools
 
-// или короче
-Thread.startVirtualThread(() -> System.out.println("Hello"));
-```
+Виртуальные threads снимают ограничение количества одновременных запросов на уровне HTTP thread pool. Но нижние уровни — connection pool к базе данных, HTTP client connection pool для внешних сервисов — остаются с фиксированным количеством ресурсов. Это создаёт новую динамику производительности требующую понимания.
 
-### 3.2 Executor
+Если было ограничение thread pool в 200 threads и pool соединений с базой в 50, то практический предел одновременных запросов идущих в базу — 50. Остальные 150 threads либо обрабатывают запросы не идущие в базу, либо ждут освобождения соединений. С виртуальными threads снимается верхнее ограничение — тысяча запросов может одновременно попытаться получить соединение. Первые 50 получат сразу, остальные 950 будут ждать освобождения. Это может привести к timeout если ожидание превышает настроенное значение.
 
-```java
-try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-    for (int i = 0; i < 1_000_000; i++) {
-        final int id = i;
-        executor.submit(() -> {
-            Thread.sleep(1000);
-            System.out.println("done " + id);
-            return null;
-        });
-    }
-}   // executor.close() ждёт все задачи
-```
+Практическое решение — увеличить размер connection pool соответственно возросшей concurrency, но это ограничено capacity самой базы данных. Продвижение bottleneck на нижний уровень не решает проблему, только смещает её. Иногда правильное решение — оставить HTTP thread pool в разумных пределах даже с виртуальными threads, чтобы естественный backpressure защищал downstream системы.
 
-Обрати внимание: **`newVirtualThreadPerTaskExecutor`** — не «пул»! Каждой задаче — свой virtual thread. Их дёшево создавать.
+Для HTTP client вызовов внешних сервисов аналогичная логика. Существует некая максимальная нагрузка которую downstream может выдержать. Если давать больше concurrent запросов чем downstream может обработать, начинаются timeout, retry, каскадные проблемы. Rate limiting и bulkhead patterns остаются актуальными даже с виртуальными threads.
 
-### 3.3 ExecutorService — обычные virtual threads
+Мониторинг становится критически важным. Метрики использования connection pools, времени ожидания получения соединения, timeout rates помогают понимать где новые пределы возможностей. Существующие практики observability переносятся на virtual threads без изменений, но необходимо переосмыслить пороги оповещений с учётом новых характеристик системы.
 
-```java
-ExecutorService exec = Executors.newThreadPerTaskExecutor(
-    Thread.ofVirtual().name("worker-", 0).factory());
-```
+## Structured Concurrency и ScopedValue
 
----
+Вместе с виртуальными threads Java 21 представила ещё две связанные фичи облегчающие написание concurrent кода. Structured Concurrency в статусе preview и ScopedValue также в preview дополняют картину.
 
-## 4. Pinning — важный кавет
+Structured Concurrency решает проблему координации параллельных задач. Классический pattern — один запрос требует данные из трёх разных источников, идёт параллельно к трём микросервисам, ждёт все три ответа, комбинирует результаты. Реализация через CompletableFuture возможна но многословна и подвержена ошибкам с error handling и cancellation.
 
-Иногда virtual thread НЕ размонтируется с carrier'а — «пинится». Причины:
+StructuredTaskScope предоставляет abstraction where все subtasks scope запуска рассматриваются как единое целое. Если родительский task отменён, все subtasks отменяются. Если один subtask падает, другие могут быть отменены в зависимости от policy. Ошибки propagate consistent way. Timeout может быть применён к всей группе. Всё в блоке try-with-resources что гарантирует cleanup ресурсов.
 
-### 4.1 `synchronized`
+Различные policies работают с разными сценариями. ShutdownOnFailure отменяет остальные задачи при первой ошибке — типичный сценарий когда все результаты необходимы для завершения запроса. ShutdownOnSuccess отменяет остальные при первом успехе — для сценария redundant queries где достаточно любого ответа. Обе policies радикально упрощают код по сравнению с ручной оркестрацией через CompletableFuture.
 
-Блок synchronized держит carrier thread:
-```java
-synchronized (lock) {
-    // если тут blocking I/O — carrier thread pinned!
-    socket.read();
-}
-```
+ScopedValue — замена ThreadLocal более подходящая для виртуальных threads. ThreadLocal имеет несколько недостатков в контексте virtual threads. Каждый виртуальный thread может иметь свой ThreadLocal, но их миллион, потребление памяти растёт. ThreadLocal не наследуется в child threads кроме через специальный InheritableThreadLocal. Модификация ThreadLocal делается императивно, что не всегда очевидно из кода.
 
-Внутри `synchronized` любое блокирование прикрепляет virtual thread к carrier'у. Если много таких — общий пул carrier'ов истощается.
+ScopedValue immutable — установка значения происходит через runWith метод который принимает callable. Значение доступно во всём callable и в любых виртуальных threads созданных внутри него, но недоступно вне scope. Это делает контекст явным в коде — где начинается видимость, где заканчивается. Хорошо подходит для request context, security context, trace ID и других scoped данных.
 
-**Решение**: используй `ReentrantLock` вместо `synchronized` — он pinning-safe.
+Практическое применение — request scoped данные вроде текущего пользователя, correlation ID, database транзакции могут быть переданы через ScopedValue вместо ThreadLocal. Более безопасно потому что нет возможности случайно оставить значение установленным после завершения запроса. Более эффективно потому что не потребляет память в каждом виртуальном thread независимо от того используется ли значение.
 
-### 4.2 Native code (JNI)
+## Виртуальные threads против reactive
 
-Пока virtual thread в native — не отмонтировать. Используй избирательно.
+Появление виртуальных threads не отменяет reactive frameworks мгновенно, но меняет ландшафт выбора. Reactive стек имел уникальное преимущество высокой concurrency при разумном потреблении ресурсов ценой сложности кода. Виртуальные threads предлагают ту же concurrency при сохранении простоты обычного blocking кода.
 
-### 4.3 Диагностика
+Для типичных enterprise приложений где основная логика — CRUD операции, интеграции через HTTP и messaging, обработка бизнес правил — виртуальные threads явно лучший выбор. Простота отладки, читаемости, exception handling, интеграции с существующими библиотеками перевешивают потенциальные небольшие преимущества reactive стека в edge cases.
 
-```
--Djdk.tracePinnedThreads=full
-```
+Reactive остаётся релевантным для специфических сценариев. Streaming обработка данных где reactive операторы вроде map, filter, buffer, window выражают логику естественнее чем императивные циклы. Backpressure сценарии где downstream медленный а upstream быстрый и нужен контроль потока — reactive имеет встроенные механизмы. Инфраструктурный код серверов, framework уровня где reactive стек уже используется и переход невыгоден.
 
-Печатает stack trace каждого pinning-события.
+Для новых проектов выбор смещается в сторону виртуальных threads по умолчанию, reactive только когда есть конкретная техническая необходимость. Для существующих проектов миграция с reactive на виртуальные threads возможна но не срочна — работающий reactive код может продолжать работать без переписывания. Смешивание в одном приложении практикуемо — некоторые части могут использовать реактивный подход, другие blocking с виртуальными threads.
 
----
+## Ограничения и подводные камни
 
-## 5. Когда использовать virtual threads
+Помимо pinning есть другие моменты требующие внимания. Виртуальные threads не подходят для CPU intensive задач. Их преимущество в дешёвом переключении при I/O ожиданиях. Для чисто вычислительной работы количество carrier threads равное CPU cores остаётся пределом — миллион virtual threads делающих расчёты в цикле не даёт никакого преимущества над несколькими platform threads.
 
-### 5.1 Подходит
+Дебаггинг миллиона виртуальных threads может быть сложным. Стандартные thread dumps становятся огромными и неинформативными. Инструменты профилирования должны быть адаптированы для нового мира. JFR и другие инструменты observability постепенно улучшают поддержку виртуальных threads, но некоторая скачка кривой обучения неизбежна.
 
-- **I/O-bound**: HTTP-клиенты, JDBC, Kafka, файлы. Один запрос ждёт → JVM отпустит carrier.
-- **Много одновременных соединений**: WebSocket, SSE, long polling.
-- **Fan-out**: параллельно позвать 10 сервисов и собрать результаты.
-- **Классический thread-per-request Tomcat**: заменяет пул на «поток на запрос без лимита».
+Некоторые библиотеки могут иметь неявные предположения о конечности количества threads. Кэши размером с количество threads, специфические оптимизации предполагающие ограниченный concurrency, определённые patterns могут ломаться при переходе на виртуальные threads. Тщательное тестирование под нагрузкой обязательно перед продакшн разворачиванием.
 
-### 5.2 Не подходит
+Виртуальные threads изменяют динамику garbage collection. Больше threads означает больше объектов connected к stack, потенциально более длительные GC паузы. Современные GC вроде ZGC и Shenandoah спроектированы работать с большим количеством threads, но старые GC могут показывать деградацию. Тестирование производительности с новой моделью необходимо.
 
-- **CPU-bound**: если поток реально считает — virtual thread не быстрее platform.
-- **С synchronized блоками с I/O** — pinning убивает преимущество.
-- **JNI-heavy**: подобное pinning.
-- **Мелкие задачи** (создание virtual thread хоть и дёшево, но не бесплатно): использовать общий пул.
+## Практическое применение в КНП
 
----
+В контексте КНП виртуальные threads наиболее применимы к tax-rep и АРМ модулям на Java 21. Эти сервисы обрабатывают формы налоговой отчётности, много интеграционных вызовов через SOAP шину, обращений к базе данных, отправку сообщений в RabbitMQ. Классический I/O bound workload который идеально подходит для виртуальных threads.
 
-## 6. Structured Concurrency (preview в 21, финал в 23)
+Активация через spring.threads.virtual.enabled в Spring Boot 3.2 и выше делается одной строкой в application.yml. Все HTTP запросы автоматически обрабатываются в виртуальных threads. Никаких изменений в код контроллеров и сервисов. Требуется только протестировать под нагрузкой чтобы убедиться в отсутствии проблем pinning.
 
-Что делать когда одна задача fan-out'ит несколько:
+Компоненты остающиеся на Java 11 — gateway на Zuul базе, некоторые legacy модули не получат виртуальные threads пока не мигрируют. Планирование миграции этих компонентов включает оценку выгоды от виртуальных threads как одного из мотивирующих факторов.
 
-```java
-try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-    Subtask<User> user = scope.fork(() -> userService.get(id));
-    Subtask<Address> addr = scope.fork(() -> addrService.get(id));
+Специфические use case вроде обработки массовых уведомлений через ScheduledJobs могут значительно выиграть от параллелизации через виртуальные threads. Задача обработки миллионов уведомлений где раньше нужна была сложная координация thread pool теперь может быть выражена простым циклом создающим virtual thread на каждое уведомление.
 
-    scope.join();               // ждём все или первую ошибку
-    scope.throwIfFailed();
+Consumers RabbitMQ могут быть настроены на виртуальные threads. Каждое входящее сообщение обрабатывается в отдельном virtual thread, никаких ограничений на concurrency со стороны consumer framework. Ограничение переносится на throughput RabbitMQ и downstream сервисы что обычно и является правильным bottleneck.
 
-    return new UserAndAddress(user.get(), addr.get());
-}
-```
+## Итоги
 
-Плюсы:
-- Все subtasks завершаются вместе или все отменяются при ошибке.
-- Читабельный код, единый scope.
-- Stack trace имеет смысл.
+Виртуальные threads Project Loom радикально меняют подход к concurrent Java программированию. Классическая модель thread per request становится масштабируемой до сотен тысяч и миллионов одновременных запросов на скромном железе. Разработчики продолжают писать привычный синхронный blocking код но получают производительность которая раньше требовала сложности reactive стека.
 
-### 6.1 Варианты
+JVM управляет виртуальными threads поверх ограниченного количества carrier threads — обычно равного количеству CPU cores. Блокирующие I/O операции автоматически освобождают carrier для других виртуальных threads. Планирование делает JVM а не операционная система, что позволяет более эффективные алгоритмы.
 
-- `ShutdownOnFailure` — при ошибке одной — всех отменить.
-- `ShutdownOnSuccess` — при первом успехе — остальных отменить.
+Активация в Spring Boot 3.2 плюс через одну настройку. Существующий код обычно работает без изменений. Виртуальные threads совместимы с ThreadLocal, synchronized, CompletableFuture и всем существующим API. Проблема pinning из-за synchronized и JNI требует внимания но решается заменой на ReentrantLock или другие concurrent примитивы.
 
----
+Structured Concurrency упрощает параллельные операции через StructuredTaskScope. ScopedValue заменяет ThreadLocal более безопасной immutable альтернативой. Обе фичи в preview в Java 21 и будут стабилизированы в последующих версиях.
 
-## 7. ScopedValue (preview в 21)
+Виртуальные threads не отменяют reactive но смещают выбор по умолчанию для типичных enterprise приложений. Reactive остаётся релевантным для streaming, backpressure сценариев, инфраструктурного кода. Смешивание в одном приложении возможно.
 
-Замена ThreadLocal для virtual threads. ThreadLocal плохо работает с миллионами VT — каждая копия жрёт память.
+Практические ограничения — виртуальные threads не подходят для CPU intensive задач, connection pools остаются bottleneck, дебаггинг миллиона threads требует новых подходов, тщательное тестирование под нагрузкой обязательно перед продакшн разворачиванием.
 
-```java
-static final ScopedValue<String> USER = ScopedValue.newInstance();
-
-ScopedValue.where(USER, "berik").run(() -> {
-    doWork();   // внутри USER.get() == "berik"
-});
-```
-
-Immutable, ограничена scope выполнения.
-
----
-
-## 8. Virtual threads в Spring Boot
-
-### 8.1 Spring Boot 3.2+
-
-```yaml
-spring:
-  threads:
-    virtual:
-      enabled: true
-```
-
-- Tomcat request-handler → virtual threads.
-- Async tasks → virtual threads.
-- Scheduled → тоже.
-
-### 8.2 Явно
-
-```java
-@Bean
-TomcatProtocolHandlerCustomizer<?> protocolHandlerVirtualThreadExecutorCustomizer() {
-    return protocolHandler -> {
-        protocolHandler.setExecutor(Executors.newVirtualThreadPerTaskExecutor());
-    };
-}
-```
-
-### 8.3 @Async
-
-```java
-@Bean
-AsyncTaskExecutor asyncTaskExecutor() {
-    return new TaskExecutorAdapter(Executors.newVirtualThreadPerTaskExecutor());
-}
-```
-
-Теперь `@Async` методы бегут на virtual threads.
-
----
-
-## 9. Пример: fan-out c virtual threads
-
-Собрать данные из 3 сервисов параллельно:
-
-```java
-// со structured concurrency
-try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-    var user = scope.fork(() -> userClient.get(userId));
-    var orders = scope.fork(() -> orderClient.getAll(userId));
-    var address = scope.fork(() -> addressClient.get(userId));
-
-    scope.join().throwIfFailed();
-
-    return new UserFullInfo(user.get(), orders.get(), address.get());
-}
-```
-
-Три HTTP-запроса параллельно на virtual threads. Latency = max(t1, t2, t3), не сумма.
-
----
-
-## 10. Отличия от reactive/WebFlux
-
-| | Virtual Threads | WebFlux (Reactor) |
-|---|---|---|
-| Стиль кода | Обычный императивный | Reactive цепочки (Mono/Flux) |
-| Blocking код | Работает (даже полезно) | Ломает event loop |
-| Кривая обучения | Знакомая | Крутая |
-| Debugging | Обычный stacktrace | Не всегда понятный |
-| Backpressure | Нет из коробки | Есть |
-| Fit для JDBC | Да | Только через R2DBC |
-
-Часто выбор — **virtual threads** для нового кода / миграции старого. WebFlux — если реально нужна backpressure (streaming) или очень много соединений (>100k).
-
----
-
-## 11. Bench-марки (примерные)
-
-Один Spring Boot сервис, endpoint делает 2 внешних HTTP-запроса + DB query:
-
-| | Throughput | Latency p99 | Memory |
-|---|---|---|---|
-| Tomcat 200 threads | 500 req/s | 400ms | 500 MB |
-| Tomcat + virtual threads | 3000 req/s | 200ms | 400 MB |
-| WebFlux + Netty | 3500 req/s | 180ms | 350 MB |
-
-Virtual threads дают почти WebFlux-performance с императивным кодом.
-
----
-
-## 12. Кавет: DB connection pool
-
-Virtual threads легко создать миллион. Но JDBC connection pool — 20 соединений в HikariCP. Если 1M virtual threads ждут DB — 999,980 в ожидании соединения (не in DB!).
-
-Решение:
-- Увеличить пул (умеренно — БД тоже имеет лимит).
-- Batch операций.
-- Асинхронный I/O (R2DBC — но тогда нет смысла в virtual threads).
-- Не выделять virtual thread per задача — семафоры для контроля concurrency.
-
-**Правило**: virtual threads не отменяют backpressure. Просто дают дешёвые потоки. Ограничения БД/API/пулов — те же.
-
----
-
-## 13. Реальность в ИСНА
-
-По memory:
-- **`knp-fo-prod-java21-migration-clean-baseline`**: прод-ФО на Java 21, virtual threads не включены явно (тут просто Java 21 upgrade).
-- В ИСНА Spring Boot 2.x массово — VT нужен Boot 3+ (Java 17 min для Boot 3). Пока не массовое использование.
-
-Ожидание: virtual threads станут стандартом после миграции всех модулей на Boot 3+.
-
----
-
-## 14. Собесные вопросы
-
-1. **Что такое virtual thread?** — Легковесный поток, управляется JVM, монтируется на carrier thread (OS thread) для выполнения.
-2. **Разница virtual и platform thread?** — VT дешёвый (миллионы), стек в heap; platform = OS thread, ~1 MB, тысячи.
-3. **Как работает carrier thread?** — Пул OS-потоков (обычно ForkJoinPool), на которых JVM выполняет virtual threads.
-4. **Что такое pinning?** — Ситуация когда VT не размонтируется с carrier: synchronized блок с I/O, native code.
-5. **Когда VT не эффективны?** — CPU-bound, много synchronized, JNI, мелкие задачи.
-6. **Что такое structured concurrency?** — Управление жизненным циклом группы задач вместе (fork/join/shutdown).
-7. **ScopedValue vs ThreadLocal?** — ScopedValue immutable, ограничен scope, лучше для VT.
-8. **Как включить VT в Spring Boot?** — `spring.threads.virtual.enabled=true` в Boot 3.2+.
-9. **VT vs WebFlux?** — VT для императивного кода с I/O; WebFlux для backpressure / >100k connections.
-10. **Что делать с DB connection pool при VT?** — Пул не растёт — семафоры или увеличенный пул; VT не отменяют backpressure.
-11. **Как найти pinning в проде?** — `-Djdk.tracePinnedThreads=full`.
-
----
-
-## Итог
-
-- **Virtual threads** = дешёвые потоки, JVM их размонтирует при I/O.
-- **Замена thread-per-request** без reactive-сложностей.
-- **Pinning** от synchronized + I/O — используй ReentrantLock.
-- **Structured concurrency** — правильный fan-out.
-- **ScopedValue** — правильный ThreadLocal для VT.
-- **Spring Boot 3.2+** — включается флагом.
-- **Не серебряная пуля** — DB pool, CPU-bound, JNI требуют внимания.
-
----
-
-## Итог блока Java 11 → 21
-
-- 16 — синтаксис (var, records, sealed, pattern matching, switch, text blocks).
-- 17 — JVM/GC (G1, ZGC, container awareness, CDS, JFR).
-- 18 — API и миграция (javax→jakarta, HttpClient, Stream.toList, грабли).
-- 19 — Virtual Threads (Loom, structured concurrency, ScopedValue).
-
-Следующий блок — RabbitMQ (файлы 20-23). Пишу `20-rabbitmq-amqp-basics.md`.
+Дальше рассматривается инфраструктура передачи сообщений — RabbitMQ и модель AMQP которые составляют критическую часть архитектуры КНП. Понимание как работают exchange, queue, binding, publisher confirms, consumer prefetch помогает правильно проектировать надёжные системы обмена сообщениями.
